<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS3218</string>
    <string name="calculator_app_name">GixCalculator</string>
    <string name="graph_app_name">Graph</string>
    <string name="sound_app_name">Sound</string>
    <string name="calculus_app_name">Calculus</string>
    <string name="fft_app_name">FFT</string>
    <string name="live_fft_app_name">Live FFT on Sound</string>
    <string name="spectrogram_app_name">Spectrogram</string>


    <string name="sin_btn">sin</string>
    <string name="cos_btn">cos</string>
    <string name="tan_btn">tan</string>
    <string name="log_btn">log</string>
    <string name="ac_btn">AC</string>
    <string name="c_btn">C</string>
    <string name="sqrt_btn">\u221a</string>
    <string name="plus_btn">+</string>
    <string name="minus_btn">-</string>
    <string name="multiply_btn">\u00D7</string>
    <string name="dot_btn">.</string>
    <string name="equal_btn">=</string>
    <string name="divide_btn">\u00F7</string>
    <string name="one_btn">1</string>
    <string name="two_btn">2</string>
    <string name="three_btn">3</string>
    <string name="four_btn">4</string>
    <string name="five_btn">5</string>
    <string name="six_btn">6</string>
    <string name="seven_btn">7</string>
    <string name="eight_btn">8</string>
    <string name="nine_btn">9</string>
    <string name="zero_btn">0</string>

    <string name="a_plus_btn">A+</string>
    <string name="a_minus_btn">A-</string>
    <string name="p_plus_btn">P+</string>
    <string name="p_minus_btn">P-</string>
    <string name="f_plus_btn">F+</string>
    <string name="f_minus_btn">F-</string>
    <string name="fft_btn">FFT</string>

    <string name="back_btn">Go Back</string>
    <string name="capture_sound">Capture</string>

    <string name="composite_function">Composite Function</string>

    <string name="t1_btn">Simple Calculator (Tutorial 1)</string>
    <string name="t2_btn">Graphing (Tutorial 2)</string>
    <string name="t3_btn">Sound (Tutorial 3)</string>
    <string name="t4_btn">Calculus (Tutorial 4)</string>
    <string name="t5_btn">FFT (Tutorial 5a)</string>
    <string name="t6_btn">Live FFT (Tutorial 5b)</string>
    <string name="t7_btn">Spectrogram (Tutorial 5c)</string>

    <string name="action_settings">Settings</string>

</resources>
