
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sineBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:onClick="sinePressed"
            android:text="@string/sin_btn" />

        <Button
            android:id="@+id/cosineBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:onClick="cosinePressed"
            android:text="@string/cos_btn" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/a_plus_btn"
            android:onClick="AplusPressed"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/a_minus_btn"
            android:onClick="AminusPressed"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/p_plus_btn"
            android:onClick="PplusPressed"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/p_minus_btn"
            android:onClick="PminusPressed"
            />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/f_plus_btn"
            android:onClick="FplusPressed"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/f_minus_btn"
            android:onClick="FminusPressed"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:onClick="fftPressed"
            android:text="@string/fft_btn" />


    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/goToMainActivity"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:onClick="goToMainActivity"
            android:text="@string/back_btn" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="80dp"
            android:layout_width="100dp"
            android:onClick="fftPressed"
            android:text="@string/fft_btn" />

    </TableRow>

    <TextView
        android:id="@+id/displayFunction"
        android:layout_width="match_parent"
        android:background="#aef"
        android:text="@string/composite_function"
        android:textSize="20sp"
        android:textStyle="bold" >
    </TextView>



    <org.gix.cs3218eugene.CSurfaceViewFFT
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:soundEffectsEnabled="true" />

</TableLayout>

