<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sin_btn"
                android:onClick="sinePressed"
                android:id="@+id/sin_btn"
                android:layout_gravity="center_horizontal" />
            <Button
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cos_btn"
                android:onClick="cosinePressed"
                android:id="@+id/cos_btn"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_plus_btn"
                android:onClick="AplusPressed"
                android:id="@+id/a_plus_btn"
                android:layout_gravity="center_horizontal" />
            <Button
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_minus_btn"
                android:onClick="AminusPressed"
                android:id="@+id/a_minus_btn"
                android:layout_gravity="center_horizontal" />
            <Button
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_plus_btn"
                android:onClick="PplusPressed"
                android:id="@+id/p_plus_btn"
                android:layout_gravity="center_horizontal" />
            <Button
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_minus_btn"
                android:onClick="PminusPressed"
                android:id="@+id/p_minus_btn"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f_plus_btn"
                android:onClick="FplusPressed"
                android:id="@+id/f_plus_btn"
                android:layout_gravity="center_horizontal" />
            <Button
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f_minus_btn"
                android:onClick="FminusPressed"
                android:id="@+id/f_minus_btn"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_btn"
                android:onClick="goToMainActivity"
                android:id="@+id/back_btn"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Composite Function"
        android:id="@+id/displayFunction"
        android:layout_gravity="center_horizontal" />

    <org.gix.cs3218tut.CSurfaceViewGraph
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/surfaceView"/>

</LinearLayout>