<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t1_btn"
        android:id="@+id/t1_btn"
        android:onClick="launchCalculator"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t2_btn"
        android:id="@+id/t2_btn"
        android:onClick="launchGraph"
        android:layout_below="@+id/t1_btn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t3_btn"
        android:id="@+id/t3_btn"
        android:onClick="launchSound"
        android:layout_below="@+id/t2_btn"
        android:layout_alignStart="@+id/t1_btn" />
</RelativeLayout>
